[tool.poetry]
name = "terrarium-capp"
version = "0.1.5"
description = "Adaptive Computer Aided Process Planner"
authors = ["Justin Vrana <justin.vrana@gmail.com>"]
homepage = "https://www.github.com/jvrana/Terrarium"
repository = "https://www.github.com/jvrana/Terrarium"
documentation = "https://www.github.com/jvrana/Terrarium"
readme = 'README.md'
packages = [
    { include = "terrarium", from = "." },
]
classifies = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Life",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7"
]

[tool.poetry.dependencies]
python = "^3.6"
dill = "^0.2.9"
pandas = "^0.24.2"
webcolors = "^1.9"
colorama = "^0.4.1"
arrow = "^0.14.2"
pydent = "=0.1.5a1"
fire = "=0.1.3"
"validator.py" = "^1.3"

[tool.poetry.scripts]
terrarium = 'terrarium.cli:main'

[tool.poetry.dev-dependencies]
pytest = "^4.6"
vcrpy = "^2.0"
black = { version = "^19.3b0", python = "^3.6" }
pre-commit = "^1.17"
pytest-benchmark = "^3.2"
pygal = "^2.4"
pygaljs = "^1.0"
keats = "^0.2.24"
tox-conda = "^0.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
