[tool.poetry]
name = "terrarium-capp"
version = "0.0.1a"
description = "Adaptive Computer Aided Process Planner"
authors = ["Justin Vrana <justin.vrana@gmail.com>"]
homepage = "https://www.github.com/jvrana/Terrarium"
repository = "https://www.github.com/jvrana/Terrarium"
documentation = "https://www.github.com/jvrana/Terrarium"
readme = 'README.md'
packages = [
    { include = "terrarium", from = "." },
]
classifies = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Life",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7"
]

[tool.poetry.dependencies]
python = "^3.7"
dill = "^0.2.9"
webcolors = "^1.9"
colorama = "^0.4.1"
termcolor = "^1.1"
pydent = "=0.1.2a"


[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pytest = "^4.6"
pre-commit = "^1.17"
vcrpy = "^2.0"
pytest-cov = "^2.7"
toml = "^0.10.0"

[tool.poetry.scripts]
upver = 'terrarium:_version.pull_version'
version = 'terrarium:_version.get_version'
name = 'terrarium:_version.get_name'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
